# carbocat-notes

./: .editorconfig  .gitignore  Makefile  Manifest.toml  Project.toml  README.md  bosscher-1992.html  carbocat-transport.html  carbocat.html  daisy-world.html  entangled.dhall  figures.mk  index.html  intro-to-julia.html  mkdocs.yml  pyproject.toml  random-fields.html  stencils.html  utility.html
.entangled/: filedb.json  makefile.in
.entangled/scripts/: get-title.lua  include.lua  tabs.lua
.entangled/template/: light.css  template.html
data/: contents.md  rednoise-SLcurve.csv
docs/: bosscher-1992.md  carbocat-cpt.md  carbocat-transport.md  carbocat.md  chapter-2-exercises.md  daisy-world.md  index.md  intro-to-julia.md  random-fields.md  ref.bib  stencils.md  zz-mm-chapter-2-exercises.md
docs/fig/: bs92-fig8.html
fig/: bs92-fig8.html
src/: BS92.jl  BS92_erosion1.jl  BS92_erosion2.jl  Burgess2013.jl  BurgessCA.jl  Daisy.jl  MindTheGap.jl  RandomFields.jl  Stencil.jl  Utility.jl
src/BS92/: fig8-sealevel.jl  fig8.jl  rednoiseSL.jl
src/Burgess2013/: CA.jl  Config.jl  Production.jl  Transport.jl
src/Daisy/: SingleSpecies.jl
src/examples/: convolution.jl  eca.jl  game-of-life.jl
src/exercises/: ch2.jl
src/figures/: bs92-fig2.gnuplot  burgess2013-fig2.gnuplot  ca.jl  plot-tanh.gnuplot
src/scripts/: Power.jl
test/: runtests.jl
